# metamodule-rigatoni

./: .gitmodules  CMakeLists.txt  LICENSE  plugin-mm.json
metamodule-plugins/: Rigatoni.mmplugin
